Bug 1834307: Change StaticPrefs::general_smoothScroll() calls with nsLayoutUtils::IsSmoothScrollingEnabled. r=tjr

Differential Revision: https://phabricator.services.mozilla.com/D221363